crypto-ticker/06-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-api
  namespace: crypto-ticker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crypto-api
  template:
    metadata:
      labels:
        app: crypto-api
    spec:
      automountServiceAccountToken: false
      containers:
        - name: crypto-api
          image: crypto-api:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 200m
