crypto-ticker/13-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector
  namespace: crypto-ticker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collector
  template:
    metadata:
      labels:
        app: collector
    spec:
      automountServiceAccountToken: false
      containers:
        - name: collector
          image: crypto-collector:v1
          imagePullPolicy: Never
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 128Mi
              cpu: 100m
