crypto-ticker/15-collector-bch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector-bch
  namespace: crypto-ticker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collector-bch
  template:
    metadata:
      labels:
        app: collector-bch
        role: collector
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:                                 
      - name: ghcr-pull
      containers:
        - name: collector
          image: ghcr.io/milas090/crypto-collector:v1
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 128Mi
              cpu: 100m
