crypto-ticker/07-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto-api
  namespace: crypto-ticker
spec:
  selector:
    app: crypto-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
